# RegLens

./: .gitignore  LICENSE  MOTIF_EXPANSION.md  README.md  RESULTS.md  RegLens_CLAUDE.md  RegLens_KICKOFF.md  RegLens_spec.md  pyproject.toml  whole_genome_SNVs.tsv.gz.tbi
data/benchmarks/: README.md  kircher_mpra_grch38.cadd.tsv  kircher_mpra_grch38.tsv
data/cases/: README.md  example_validation.tsv
docs/: discovery_worked_example_rs342293.md  prospective_hypothesis.md  prospective_hypothesis_rs342293.md
figures/: generate.py  generate_crossover.py
notebooks/: 01_engine_validation.ipynb  02_crossover.ipynb  03_agent_null_control.ipynb  04_agent_reasoning.ipynb  05_discovery_screen.ipynb  README.md
reglens/: __init__.py  cli.py  genome.py  mcp_server.py  orchestrator.py
reglens/agents/: __init__.py  _llm.py  interpreter.py  multi_agent.py
reglens/data/: __init__.py
reglens/data/demo/: demo.fa
reglens/data/motifs/: README.md  binding_null.default.json  jaspar_core_subset.jaspar
reglens/model/: README.md  __init__.py  colab_verify_chrombpnet.ipynb  train_chrombpnet.ipynb
reglens/report/: __init__.py  plot.py  render.py  schema.py
reglens/tools/: __init__.py  _http.py  chrombpnet_score.py  gene_target.py  literature.py  motif_effect.py  regulatory_context.py  trait_link.py
reglens/validation/: __init__.py  agent_eval.py  build_mpra_benchmark.py  cadd.py  dataset.py  discovery.py  harness.py  lineage.py  metrics.py  null_control.py  run_validation.ipynb
tests/: conftest.py  test_agent_eval.py  test_agent_live_path.py  test_calibration_benchmark.py  test_chrombpnet_score.py  test_cli.py  test_discovery.py  test_gene_target.py  test_genome.py  test_http.py  test_interpreter.py  test_literature.py  test_mcp_server.py  test_motif_effect.py  test_multi_agent.py  test_null_control.py  test_orchestrator.py  test_regulatory_context.py  test_trait_link.py  test_validation.py
