[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reglens"
version = "0.0.1"
description = "Agentic mechanistic interpreter for noncoding regulatory variants"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RegLens contributors" }]
keywords = ["genomics", "regulatory-variants", "chrombpnet", "interpretability", "agents"]

# Runtime dependencies.
#
# Kept intentionally lean for the Wednesday milestone. `pyfaidx` is the only
# hard runtime dep needed for genome plumbing; `typer` powers the CLI. Heavy
# ML backends (tensorflow / chrombpnet) are declared as optional extras so the
# core package installs and its tests run offline on CPU without pulling GPU
# stacks.
dependencies = [
    "pyfaidx>=0.7",
    "typer>=0.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
# The pretrained-ChromBPNet inference backend. Optional so the deterministic
# core (and its stub-model tests) run without TensorFlow installed.
chrombpnet = [
    "tensorflow>=2.12",
]
# The reasoning layer. Optional so the deterministic core + stub interpreter run
# without the Anthropic SDK. Needs an API key / `ant` profile at runtime.
agents = [
    "anthropic>=0.40",
]
# The MCP stdio server that exposes the deterministic tool layer to MCP hosts
# (Claude Desktop, etc.). Optional so the core package and its tests don't require
# the MCP SDK to be installed.
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
reglens = "reglens.cli:app"
reglens-mcp = "reglens.mcp_server:main"

[tool.setuptools.packages.find]
include = ["reglens*"]

[tool.setuptools.package-data]
# Ship the bundled demo genome and JASPAR motif subset inside the wheel.
reglens = ["data/**/*.fa", "data/**/*.jaspar", "data/**/*.json", "data/**/*.md", "model/*.ipynb"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Colab/Kaggle notebooks are teaching artifacts (interleaved shell magics, terse
# helpers) — don't hold them to package-source lint rules.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B),
# pydocstyle (D) so we keep the Google-style-docstring rule enforced.
select = ["E", "F", "I", "UP", "B", "D"]
ignore = [
    "D203",  # 1 blank line before class docstring (conflicts with D211)
    "D213",  # multi-line summary on second line (conflicts with D212)
    "B008",  # function call in default arg — the idiomatic Typer Option/Argument pattern
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need module/function docstrings.
"tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the opt-in live-API test by default; run it with `pytest -m live`.
addopts = "-q -m 'not live'"
markers = [
    "live: exercises the real Anthropic API (opt-in; needs ANTHROPIC_API_KEY; run with -m live)",
]
